--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,23 @@
         "activityBar.background": "#531733",
         "titleBar.activeBackground": "#742048",
         "titleBar.activeForeground": "#FEFCFD"
-    }
+    },
+    "cSpell.words": [
+        "Acerca",
+        "Actividad",
+        "Aprendizaje",
+        "Conociendo",
+        "Contenido",
+        "Humano",
+        "Inicio",
+        "Interacción",
+        "Ordenador",
+        "pagina",
+        "Recurso",
+        "Recursos",
+        "Selectores",
+        "Sintaxis",
+        "Tema",
+        "Temas"
+    ]
 }
